--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup MSBuild
         uses: warrenbuckley/Setup-MSBuild@v1
       - name: Setup Nuget.exe
-        uses: warrenbuckley/Setup-Nuget@v1
+        uses: nuget/setup-nuget@v1
       - name: Restore nuget Packages
         run: dotnet restore Mosa.sln
         working-directory: Source
