--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: travisj/build-number-action@v1
         id: my-project-build-number
       - name: Set Build Version
-        run: echo $BUILD_VERSION_NUMBER
+        run: echo ${{ env.BUILD_VERSION_NUMBER }}
         env:
-           BUILD_VERSION_NUMBER: ${{ env.BUILD_VERSION }}.${{ steps.my-project-build-number.outputs.build-number }}
+          BUILD_VERSION_NUMBER: ${{ env.BUILD_VERSION }}.${{ steps.my-project-build-number.outputs.build-number }}
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup MSBuild
@@ -29,9 +29,9 @@ jobs:
       - name: Build
         run: msbuild Source/Mosa.sln /p:Version=${{ env.BUILD_VERSION }}
       - name: Create Installer
-        run: ISCC.exe /DMyAppVersion=${{ env.$BUILD_VERSION_NUMBER }} Source/Inno-Setup-Script/Mosa-Installer.iss
+        run: ISCC.exe /DMyAppVersion=${{ env.BUILD_VERSION_NUMBER }} Source/Inno-Setup-Script/Mosa-Installer.iss
         env:
-           BUILD_VERSION_NUMBER: ${{ env.BUILD_VERSION }}.${{ steps.my-project-build-number.outputs.build-number }}
+          BUILD_VERSION_NUMBER: ${{ env.BUILD_VERSION }}.${{ steps.my-project-build-number.outputs.build-number }}
       - name: Create Package - Mosa.Tools.Package
         run: nuget pack Source\Mosa.Packages\Mosa.Tools.Package.nuspec -OutputDirectory bin\nupkg -Version ${{ env.BUILD_VERSION }}
       - name: Create Package - Mosa.Korlib
@@ -49,10 +49,10 @@ jobs:
       - name: Publish Installer
         uses: actions/upload-artifact@master
         with:
-          name: MOSA-Installer-$BUILD_VERSION.exe
-          path: bin\MOSA-Installer-${{ env.BUILD_VERSION }}.exe
+          name: MOSA-Installer-${{ env.BUILD_VERSION_NUMBER }}.exe
+          path: bin\MOSA-Installer-${{ env.BUILD_VERSION_NUMBER }}.exe
         env:
-           BUILD_VERSION_NUMBER: ${{ env.BUILD_VERSION }}.${{ steps.my-project-build-number.outputs.build-number }}
+          BUILD_VERSION_NUMBER: ${{ env.BUILD_VERSION }}.${{ steps.my-project-build-number.outputs.build-number }}
 
       - name: Publish Nuget Packages
         uses: actions/upload-artifact@master
