--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -61,7 +61,7 @@ jobs:
         run: bin\Mosa.Utility.UnitTests.exe -oNone -s Emulator.Display=false
       - name: Publish Package - Mosa.Tools.Package
         run: dotnet nuget push bin\nupkg\Mosa.Tools.Package.*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json
-        if: github.event == 'push' && github.repository == 'mosa/MOSA-Project' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.repository == 'mosa/MOSA-Project' && github.ref == 'refs/heads/master'
 
   build-unix:
     name: Linux Build
