--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install New Packages
-        run: sudo apt-get install -y git wget qemu qemu-system qemu-system-x86
+        run: sudo apt-get install -y git qemu qemu-system qemu-system-x86
       - name: Restore nuget Packages
         run: dotnet restore Source/Mosa.Linux.sln
       - name: Build
