--- a/Source/Mosa.UnitTests/Mosa.UnitTests.csproj
+++ b/Source/Mosa.UnitTests/Mosa.UnitTests.csproj
@@ -135,7 +135,7 @@
 		</None>
 	</ItemGroup>
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net461;net472</TargetFrameworks>
+		<TargetFrameworks>net472</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0-preview.2" />
