--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -92,11 +92,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
+        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update && sudo apt-get -y upgrade
       - name: Install New Packages
         run: sudo apt-get install -y git qemu qemu-system qemu-system-x86
-        run: sudo apt-get update
-        run: sudo apt-get upgrade
       - name: Restore nuget Packages
         run: dotnet restore Source/Mosa.Linux.sln
       - name: Build
