--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Restore nuget Packages
         run: dotnet restore Source/Mosa.Linux.sln
       - name: Build
-        run: msbuild /verbosity:minimal Source/Mosa.Linux.sln
+        run: msbuild /verbosity:normal Source/Mosa.Linux.sln
       - name: Unit Tests - All Performance Optimizations
         run: dotnet bin/Mosa.Utility.UnitTests.dll -oMax -s Emulator.Display=false
       - name: Unit Tests - No Optimizations
