--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -30,7 +30,7 @@ jobs:
 
   build-unix:
     name: Linux - Unit Tests
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     strategy:
        matrix:
@@ -44,10 +44,10 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update && sudo apt-get -y upgrade
       - name: Install New Packages
-        run: sudo apt-get install -y git wget qemu qemu-system qemu-system-x86
+        run: sudo apt-get install -y wget qemu qemu-system qemu-system-x86
       - name: Restore nuget Packages
         run: dotnet restore Source/Mosa.Linux.sln
       - name: Build
-        run: msbuild /verbosity:normal Source/Mosa.Linux.sln
+        run: dotnet build Source/Mosa.Linux.sln
       - name: Unit Tests
         run: dotnet bin/Mosa.Utility.UnitTests.dll ${{ matrix.level }} -s Emulator.Display=false
