--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -87,18 +87,18 @@ jobs:
 
   build-unix:
     name: Linux Build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update && sudo apt-get -y upgrade
-      - name: Install New Packages
-        run: sudo apt-get install -y qemu qemu-system qemu-system-x86
+#      - name: Update Package Respository
+#        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update && sudo apt-get -y upgrade
       - name: Restore nuget Packages
         run: dotnet restore Source/Mosa.Linux.sln
       - name: Build
         run: dotnet build Source/Mosa.Linux.sln
+      - name: Install Qemu
+        run: sudo apt-get install -y wget qemu qemu-system qemu-system-x86
       - name: Unit Tests - All Performance Optimizations
         run: dotnet bin/Mosa.Utility.UnitTests.dll -oMax -s Emulator.Display=false
       - name: Unit Tests - No Optimizations
